Squashin bugs

--- a/css/main.css
+++ b/css/main.css
@@ -205,11 +205,11 @@ img {
   .navbar-custom .avatar-container {
     left: 50%;
     width: 120px;
-    margin-top: -65px;
+    margin-top: -15px;
   }
   .navbar-custom.top-nav-short .avatar-container {
      width: 60px;
-     margin-top: -55px;
+     margin-top: -5px;
      left: 50%;
   }
 
@@ -231,6 +231,11 @@ img {
   }
 }
 
+@media only screen and (max-width: 400px) {
+   .navbar-custom .avatar-container {
+      display: none;
+   }
+}
 /* Multi-level navigation links */
 .navbar-custom .nav .navlinks-container {
   position: relative;
